spring: relatorio dre funcionando.